# agot-gen

./: .gitignore  dvc.yaml  params.yaml  setup.cfg
data/: raw.dvc
data/lm/: .gitignore
data/splits/: .gitignore
metrics/: .gitignore
models/kenlm/: .gitignore
scripts/: ngram_lm.py  preprocess_lm.py  split.py
src/agotgen/: data.py  main.py
src/agotgen/model/: kenlm.py
