[metadata]
name = agotgen
version = 0.1

[options]
install_requires =
    pandas
    typer[all]
    scikit-learn
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    agot = agotgen.main:app

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501